# dployDB

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  NOTICE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demo/: .dockerignore  Dockerfile  __init__.py  compose.yaml  controller.py  dploydb.yaml  prepare.py
demo/releases/broken-health/: migration.sql  release.json
demo/releases/broken-migration/: migration.sql  release.json
demo/releases/final-health-failure/: release.json
demo/releases/v1/: migration.sql  release.json
demo/releases/v2/: release.json
demo/runtime/: __init__.py  app.py  migration.py  production_migration_failure.py  release.py  traffic_hook.py
docs/: first-run.md  limitations.md  security.md  uninstall.md
dploydb/: __init__.py  __main__.py  backup.py  candidate.py  cli.py  config.py  cutover.py  deploy.py  deployment_dependencies.py  deployment_evidence.py  diagnostics.py  errors.py  health.py  locking.py  manual_restore.py  migration.py  models.py  recovery.py  redaction.py  releases.py  restore.py  retention.py  sqlite_checks.py  state.py  subprocesses.py  traffic.py
dploydb/runners/: __init__.py  base.py  docker_compose.py  docker_compose_production.py
dploydb/storage/: __init__.py  base.py  local.py  s3.py
examples/nginx/: README.md  dploydb-hook.py  dploydb.yaml  site.conf
scripts/: release_notes.py  verify_clean_linux.py  verify_distribution.py  verify_pipx_install.py  verify_registry.py  verify_release_tag.py  verify_s3_compatibility.py
tests/: test_cli.py  test_config.py  test_errors.py  test_redaction.py
tests/fault_injection/: test_lock_interruption.py  test_release_state_interruption.py  test_state_interruption.py  test_subprocess_tree_cleanup.py
tests/integration/: test_backup_cli.py  test_backup_engine.py  test_candidate_runner.py  test_candidate_validation.py  test_demo_docker.py  test_demo_prepare.py  test_demo_runtime.py  test_deploy_end_to_end.py  test_migration_rehearsal.py  test_milestone1_gate.py  test_nginx_hook_example.py  test_production_runner.py
tests/unit/: test_backup.py  test_candidate.py  test_cutover.py  test_deploy.py  test_deploy_cli.py  test_diagnostics.py  test_docker_compose_production_runner.py  test_docker_compose_runner.py  test_health.py  test_locking.py  test_manual_restore.py  test_migration.py  test_milestone8_cli.py  test_milestone8_docs.py  test_recover_cli.py  test_recovery.py  test_release_cli.py  test_release_readiness.py  test_releases.py  test_restore.py  test_restore_cli.py  test_retention.py  test_s3_storage.py  test_sqlite_checks.py  test_state.py  test_subprocesses.py  test_traffic.py
